nginx-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
spec: 
  nodeSelector: 
    gpu: "false"
  containers:
    - name: nginx
      image: nginx
      ports: 
        - containerPort: 80
