nginx-with-label.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-backend
  labels:
    team: backend
    version: v1
    environment: dev
spec: 
  containers:
    - name: nginx
      image: nginx
      ports: 
        - containerPort: 80
