nginx-with-probe.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
spec: 
  containers:
    - name: nginx
      image: nginx
      ports: 
        - containerPort: 80
      livenessProbe: 
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 0
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
