nodejs-gcp-with-pv-pvc.yaml

apiVersion: v1
kind: Pod
metadata:
  name: nodejs-gcp
  labels:
    name: nodejs-gcp
spec:
  volumes:
    - name: html
      persistentVolumeClaim:
        claimName: pv-storage-claim-nodejs-gcp
  containers:
    - name: nodejs-gcp
      image: sholehbaktiabadi/gcp-test-root:latest
      volumeMounts:
        - mountPath: /app/html
          name: html
      resources:
        limits:
          memory: 4Gi
          cpu: 4
        requests:
          memory: 1Gi
          cpu: 1
