stateful-set.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nodejs-gcp-statefull
spec:
  selector:
    matchLabels:
      name: nodejs-gcp-statefull
  serviceName: nodejs-gcp-statefull-service
  replicas: 5
  volumeClaimTemplates:
    - metadata:
        name: mypv-gcp-nodejs-statefull-calim
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
  template:
    metadata:
      name: nodejs-gcp-statefull
      labels:
        name: nodejs-gcp-statefull
    spec:
      containers:
        - name: nodejs-gcp-statefull
          image: sholehbaktiabadi/gcp-test-root:latest
          volumeMounts:
            - name: mypv-gcp-nodejs-statefull-calim
              mountPath: /app/data
