deployment-with-horizontal-autoscaler.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-gcp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      name: nodejs-gcp
  template:
    metadata:
      labels:
        name: nodejs-gcp
    spec:
      containers:
      - name: nodejs-gcp
        image: sholehbaktiabadi/gcp-test-root:latest
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
---

apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  selector:
    name: nodejs-gcp
  ports:
  - port: 5001
    targetPort: 5001
    nodePort: 30001
