deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-gcp
  labels:
    name: nodejs-gcp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nodejs-gcp
  template:
    metadata:
      name: nodejs-gcp
      labels:
        name: nodejs-gcp
    spec:
      containers:
        - name: nodejs-gcp
          image: sholehbaktiabadi/gcp-test-root:0.0.1
          resources:
            limits:
              memory: "5Gi"
              cpu: "5000m"
---

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    name: nodejs-gcp
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 30001
