env-config-map.yaml

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    name: gcp-test-root
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 30001
