external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    name: external-service
spec:
  type: ExternalName
  externalName: example.com
  ports:
    - port: 80

---

apiVersion: v1
kind: Pod
metadata: 
  name: pod-test
  labels: 
    name: pod-test
spec: 
  containers:
    - name: pod-test
      image: sholehbaktiabadi/curl
