service-nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec: 
  selector: 
    name: nginx
  ports: 
    - port: 8080
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata: 
  name: pod-test
  labels: 
    name: pod-test
spec: 
  containers:
    - name: pod-test
      image: sholehbaktiabadi/curl
