service-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec: 
  selector: 
    name: nginx
  ports: 
    - port: 8080
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
